--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,22 @@
+# Ignore Build Artifacts
 target/
+
+release.properties
+buildNumber.properties
+
+# Ignore Maven Artifacts
+.mvn/timing.properties
+# https://github.com/takari/maven-wrapper#usage-without-binary-jar
+.mvn/wrapper/maven-wrapper.jar
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
 pom.xml.next
-release.properties
 dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
-# https://github.com/takari/maven-wrapper#usage-without-binary-jar
-.mvn/wrapper/maven-wrapper.jar
 
-# Eclipse m2e generated files
-# Eclipse Core
+# Ignore Eclipse Artifacts
 .project
-# JDT-specific (Eclipse Java Development Tools)
 .classpath
+
+# Ignore VS Code Artifacts
+.vscode/
