--- a/.gitignore
+++ b/.gitignore
@@ -6,13 +6,15 @@ buildNumber.properties
 
 # Ignore Maven Artifacts
 .mvn/timing.properties
-# https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
 pom.xml.next
 dependency-reduced-pom.xml
+
+# Ignore IntelliJ Artifacts
+.idea
 
 # Ignore Eclipse Artifacts
 .project
